--- a/assets/stylesheets/app.css.sass
+++ b/assets/stylesheets/app.css.sass
@@ -271,6 +271,8 @@ footer
       margin-left: 0px
     form
       text-align: left
+      float: left
+      margin-top: 10px
     .source
       margin-top: 8px
       margin-left: 19px
@@ -281,6 +283,14 @@ footer
       margin-bottom: 6px
     .item-subheading
       margin-top: 8px
+    .book-price
+      font-weight: bold
+      font-style: normal
+      color: black
+      float: left
+      margin-top: 13px
+      margin-left: 6px
+
     .case-study-image
       width: 100%
       height: 150px
