--- a/assets/stylesheets/app.css.sass
+++ b/assets/stylesheets/app.css.sass
@@ -274,6 +274,16 @@ footer
 
 .case-studies, .section-books
   text-align: center
+  &.half, &.full
+    .case-study, .book
+      width: 35%
+  &.full
+    .case-study, .book
+      width: 45%
+  &.quarter
+    .case-study, .book
+      width: 21%
+
   .case-study, .book
     width: 30%
     display: inline-block
