--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -340,10 +340,14 @@ footer {
       margin-bottom: 5px;
       text-align: center; }
 
+.seminars .section-content .item-heading {
+  text-transform: none;
+  font-size: 18px; }
+
 .talks {
   text-align: center; }
   .talks .section-content {
-    max-width: 950px; }
+    max-width: 1000px; }
   .talks iframe {
     max-width: 100%;
     height: 230px;
