--- a/assets/stylesheets/app.css.sass
+++ b/assets/stylesheets/app.css.sass
@@ -347,10 +347,16 @@ footer
       margin-bottom: 5px
       text-align: center
 
+.seminars
+  .section-content
+    .item-heading
+      text-transform: none
+      font-size: 18px
+
 .talks
   text-align: center
   .section-content
-    max-width: 950px
+    max-width: 1000px
   iframe
     max-width: 100%
     height: 230px
