--- a/assets/stylesheets/app.css.sass
+++ b/assets/stylesheets/app.css.sass
@@ -284,6 +284,10 @@ footer
     .case-study, .book
       width: 21%
 
+  a.item-heading
+    display: block
+    color: black
+    text-align: left
   .case-study, .book
     width: 30%
     display: inline-block
