give books and seminars their own layout

--- a/assets/stylesheets/app.css.sass
+++ b/assets/stylesheets/app.css.sass
@@ -282,12 +282,15 @@ footer
       width: 45%
   &.quarter
     .case-study, .book
-      width: 21%
+      width: 21.6%
 
   a.item-heading
     display: block
     color: black
     text-align: left
+    font-weight: normal
+    text-decoration: underline
+
   .case-study, .book
     width: 30%
     display: inline-block
@@ -355,7 +358,7 @@ footer
   .section-content
     .item-heading
       text-transform: none
-      font-size: 18px
+      font-size: $base-font-size
 
 .talks
   text-align: center
