--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -277,11 +277,13 @@ footer {
   .case-studies.full .case-study, .case-studies.full .book, .section-books.full .case-study, .section-books.full .book {
     width: 45%; }
   .case-studies.quarter .case-study, .case-studies.quarter .book, .section-books.quarter .case-study, .section-books.quarter .book {
-    width: 21%; }
+    width: 21.6%; }
   .case-studies a.item-heading, .section-books a.item-heading {
     display: block;
     color: black;
-    text-align: left; }
+    text-align: left;
+    font-weight: normal;
+    text-decoration: underline; }
   .case-studies .case-study, .case-studies .book, .section-books .case-study, .section-books .book {
     width: 30%;
     display: inline-block;
