--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -347,8 +347,7 @@ footer {
       text-align: center; }
 
 .seminars .section-content .item-heading {
-  text-transform: none;
-  font-size: 18px; }
+  text-transform: none; }
 
 .talks {
   text-align: center; }
