--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,21 @@
+<div class="separate"></div>
+<section class="large-footer" id="large-footer">
+    <div class="section-content">
+        <h1>Dr. Bill Moore</h1>
+        <div class="personal-images">
+            <div class="image" style="background-image: url('/assets/images/bill-ian.jpg')"></div>
+            <div class="portrait"></div>
+            <div class="image" style="background-image: url('/assets/images/bill-nicki.jpg')"></div>
+        </div>
+        <p>
+            Influential Author, International Speaker and Executive Coach, Dr. Moore has trained world class athletes, performing artists, business professionals, and organizations in the United States and Europe. He holds a Doctorate degree in Sport Psychology from the University of Virgina. His unique blend of experiences as a professional tennis player, intercollegiate coach and performatnce psychology specialist has help to develop his reputation as a leading authority in his field.
+        </p>
+        <p>Currently living in Oklahoma with my wife Nicki and son Ian.</p>
+        <div class="border"></div>
+        <h1 class="small-width">Be more positive, focused and fighting</h1>
+        <a class="button" href="mailto:bemore@drbillmoore.com?subject=Inquiry about performance coaching">Inquire about performance coaching</a>
+    </div>
+</section>
+
 <footer>&copy; Bill Moore 2015</footer>
 <script type="text/javascript" src="/assets/application.js"></script>
