--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -8,7 +8,15 @@ layout: compress
     <body>
         {% include header.html %}
         <div class="wrapper">
-            {{ content }}
+            <section class="book">
+                <div class="section-content">
+                    <div class="section-book">
+                        <div class="case-study-image" style="background-image: url('{{ book.image }}')"></div>
+                        <h1>{{ page.title }}</h1>
+                        {{ content }}
+                    </div>
+                </div>
+            </section>
         </div>
         {% include footer.html %}
         {% include ga.html %}
