--- a/assets/stylesheets/app.css.sass
+++ b/assets/stylesheets/app.css.sass
@@ -282,7 +282,7 @@ footer
       width: 45%
   &.quarter
     .case-study, .book
-      width: 21.6%
+      width: 22.5%
 
   a.item-heading
     display: block
@@ -292,10 +292,10 @@ footer
     text-decoration: underline
 
   .case-study, .book
-    width: 30%
+    width: 31.1%
     display: inline-block
     vertical-align: top
-    margin: 0px 2% 17px
+    margin: 0px 1.4% 17px
     &:first-child
       margin-left: 0px
     &:last-child
@@ -441,36 +441,21 @@ footer
 .books
   padding-top: 0px
 
-.team
-  .section-content
-    max-width: 950px
-  .team-member
-    width: 32.9%
-    display: inline-block
-    vertical-align: top
-    margin-bottom: 20px
-    .team-member-image
-      width: 110px
-      height: 110px
-      background: #333
-      +border-radius(50%)
-      display: block
-      background-size: cover
-      background-repeat: no-repeat
-      background-position: center center
-      float: left
-      margin-right: 6%
-    .item-subheading
-      max-width: 93%
-  .team-leads
-    margin-bottom: 20px
-  .team-collaborators
-    text-align: center
-    h3
-      margin-bottom: 28px
-    .team-member-image
-      width: 60px
-      height: 60px
+section.section-book
+  max-width: 650px
+  margin: 0px auto
+  .book
+    margin: 0px
+    width: 100%
+    p
+      text-align: left
+  .book-page-image
+    background-size: cover
+    background-repeat: no-repeat
+    background-position: center center
+    width: 200px
+    height: 200px
+    margin: 10px auto
 
 .about
   .section-content
