--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -13,7 +13,11 @@ layout: compress
                     <div class="book">
                         <h3>Book</h3>
                         <div class="border"></div>
-                        <div class="book-page-image" style="background-image: url('{{ page.image }}')"></div>
+                        <div class="books-container">
+                            <div class="three-d-book">
+                                <div class="book-page-image" style="background-image: url('{{ page.image }}')"></div>
+                            </div>
+                        </div>
                         <h1>{{ page.title }}</h1>
                         {{ content }}
                     </div>
