--- a/assets/stylesheets/app.css.sass
+++ b/assets/stylesheets/app.css.sass
@@ -449,6 +449,9 @@ section.section-book
     width: 100%
     p
       text-align: left
+    .item-supheading
+      text-align: center
+      margin-bottom: 20px
 
 .book-page-image
   background-size: cover
