--- a/assets/stylesheets/app.css.sass
+++ b/assets/stylesheets/app.css.sass
@@ -356,8 +356,14 @@ footer
 
 .seminars
   .section-content
+    text-align: center
+    h3
+      font-size: 22px
+      font-weight: normal
     .item-heading
       text-transform: none
+      text-decoration: none
+      font-size: 18px
 
 .talks
   text-align: center
