--- a/assets/stylesheets/app.css.sass
+++ b/assets/stylesheets/app.css.sass
@@ -258,6 +258,9 @@ footer
     font-size: 22px
     line-height: 138%
     margin-bottom: 7px
+    a
+      color: black
+      text-decoration: underline
 
 .item-subheading
   font-size: $small-font-size
@@ -292,6 +295,8 @@ footer
     text-align: left
     font-weight: normal
     text-decoration: underline
+    font-size: 20px
+    margin-bottom: 4px
 
   .case-study, .book
     width: 31.1%
