--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -261,7 +261,6 @@ footer {
       text-decoration: underline; }
 
 .item-subheading {
-  font-size: 16px;
   text-align: left;
   line-height: 144%; }
 
@@ -363,10 +362,13 @@ footer {
   .seminars .section-content h3 {
     font-size: 22px;
     font-weight: normal; }
-  .seminars .section-content .item-heading {
+  .seminars .section-content .item-heading.large-heading {
     text-transform: none;
     text-decoration: none;
-    font-size: 18px; }
+    font-size: 18px;
+    font-weight: normal; }
+    .seminars .section-content .item-heading.large-heading:hover {
+      text-decoration: underline; }
 
 .talks {
   text-align: center; }
@@ -435,7 +437,7 @@ footer {
 .button {
   display: inline-block;
   padding: 10px 20px;
-  background: #B91019;
+  background: #A50700;
   color: white;
   border-radius: 5px;
   font-family: sans-serif;
@@ -505,8 +507,7 @@ section.section-book {
       width: 70%;
       margin-left: 4%;
       display: inline-block;
-      vertical-align: top;
-      font-size: 18px; }
+      vertical-align: top; }
     .about .about-section-group .about-section .faux-underline-large::before {
       margin-top: 0.25em; }
 
