--- a/assets/stylesheets/app.css.sass
+++ b/assets/stylesheets/app.css.sass
@@ -472,6 +472,14 @@ section.section-book
     .item-supheading
       text-align: center
       margin-bottom: 20px
+    ul
+      margin: -17px 0px 17px 0px
+      padding: 0px
+      li
+        text-align: left
+        list-style: disc
+        padding: 0px
+        margin: 0px 0px 0px 23px
 
 .book-page-image
   background-size: cover
