add family photo to bottom

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,9 +3,10 @@
         <h1>Dr. Bill Moore</h1>
         <div class="personal-images">
             <div class="image" style="background-image: url('/assets/images/bill-ian.jpg')"></div>
-            <div class="portrait"></div>
+            <div class="image" style="background-image: url('/assets/images/family.jpg')"></div>
             <div class="image" style="background-image: url('/assets/images/bill-nicki.jpg')"></div>
         </div>
+        <br />
         <p>
             Influential Author, International Speaker and Executive Coach, Dr. Moore has trained world class athletes, performing artists, business professionals, and organizations in the United States and Europe. He holds a Doctorate degree in Sport Psychology from the University of Virgina. His unique blend of experiences as a professional tennis player, intercollegiate coach and performatnce psychology specialist has help to develop his reputation as a leading authority in his field.
         </p>
