--- a/assets/stylesheets/app.css.sass
+++ b/assets/stylesheets/app.css.sass
@@ -359,7 +359,7 @@ footer
     width: 30%
     display: inline-block
     vertical-align: top
-    margin: 0px 2% 17px
+    margin: 15px 2% 17px
     &:first-child
       margin-left: 0px
     &:last-child
@@ -367,6 +367,8 @@ footer
     .item-heading
       margin-bottom: 5px
       text-align: center
+    .font-heading, .border
+      margin-bottom: 25px
 
 .seminars
   .section-content
@@ -503,10 +505,11 @@ section.section-book
       width: 611px
       margin: 50px auto
   h3
-    margin-top: 30px
     margin-bottom: 20px
     font-size: 30px
     text-transform: uppercase
+    max-width: 580px
+    margin: 30px auto 20px auto
 
   .about-section-group
     max-width: 720px
