--- a/assets/stylesheets/responsive.css.sass
+++ b/assets/stylesheets/responsive.css.sass
@@ -29,6 +29,15 @@
       width: 100%
       margin: 0px 0px 30px
 
+    &.half, &.full, &.full, &.quarter
+      .case-study, .book
+        width: 100%
+
+  .seminars
+    .section-books
+      .book
+        margin-bottom: 5px
+
   .more-section-group
     .more-section
       width: 100%
@@ -79,3 +88,9 @@
 
   .war-room, .streets
     display: none
+
+  .personal-images
+    .image
+      margin-bottom: 10px
+      &:last-child
+        margin-bottom: 0px
