--- a/assets/stylesheets/responsive.css
+++ b/assets/stylesheets/responsive.css
@@ -22,6 +22,11 @@
   .case-studies .case-study, .case-studies .book, .section-books .case-study, .section-books .book {
     width: 100%;
     margin: 0px 0px 30px; }
+  .case-studies.half .case-study, .case-studies.half .book, .case-studies.full .case-study, .case-studies.full .book, .case-studies.full .case-study, .case-studies.full .book, .case-studies.quarter .case-study, .case-studies.quarter .book, .section-books.half .case-study, .section-books.half .book, .section-books.full .case-study, .section-books.full .book, .section-books.full .case-study, .section-books.full .book, .section-books.quarter .case-study, .section-books.quarter .book {
+    width: 100%; }
+
+  .seminars .section-books .book {
+    margin-bottom: 5px; }
 
   .more-section-group .more-section {
     width: 100%;
@@ -68,4 +73,9 @@
       margin: 0px 0px 20px; }
 
   .war-room, .streets {
-    display: none; } }
+    display: none; }
+
+  .personal-images .image {
+    margin-bottom: 10px; }
+    .personal-images .image:last-child {
+      margin-bottom: 0px; } }
