--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
         <p>
             Influential Author, International Speaker and Executive Coach, Dr. Moore has trained world class athletes, performing artists, business professionals, and organizations in the United States and Europe. He holds a Doctorate degree in Sport Psychology from the University of Virgina. His unique blend of experiences as a professional tennis player, intercollegiate coach and performatnce psychology specialist has help to develop his reputation as a leading authority in his field.
         </p>
-        <p>Currently living in Oklahoma with my wife Nicki and son Ian.</p>
+        <p>Bull currently lives in Oklahoma and spends his freetime with his wife Nicki, and sons Brennan, Tyler, Cullen and Ian.</p>
         <div class="border"></div>
         <h1 class="small-width">Be more positive, focused and fighting</h1>
         <a class="button" href="mailto:bemore@drbillmoore.com?subject=Inquiry about performance coaching">Inquire about performance coaching</a>
