--- a/assets/stylesheets/responsive.sass
+++ b/assets/stylesheets/responsive.sass
@@ -1,5 +1,3 @@
-@import "compass/css3"
-
 @media (max-width: 700px)
   body
     font-size: 16px
@@ -51,8 +49,8 @@
   .more-info
     .section-content
       .client-section
-        +column-count(2)
-        +column-width(130px)
+        column-count: 2
+        column-width: 130px
         .faux-underline-large
           &:before
             border-bottom: 0px solid #333
